--- a/app/src/main/res/layout/activity_horarios.xml
+++ b/app/src/main/res/layout/activity_horarios.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TimePicker
-        android:id="@+id/timePicker1"
+        android:id="@+id/timePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp" />
